# caxton

./: pyproject.toml
src/: train.py  train_config.py
src/model/: network_module.py  res_net.py
